fix overflow

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -3,7 +3,7 @@
 body {
 	margin: 0;
 	padding: 0;
-	overflow-x: hidden; 
+	overflow-x: hidden;
 	width: 100%;
     height: 100%;
 	font-family: 'Google Sans', sans-serif;
@@ -17,6 +17,7 @@ h3,
 h4,hr {
 	margin: 0;
 	padding: 0;
+	overflow-x: hidden;
 }
 hr {
 	border: 0 solid #d8d8d8;
